<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddReunionActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <Spinner
                android:id="@+id/meetingRooms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="32dp"
                android:layout_margin="20dp"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/meetingDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="32dp"
                android:layout_margin="20dp"
                android:hint="Jour de la reunion" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/meetingStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="32dp"
                android:layout_margin="20dp"
                android:hint="Debut de la reunion" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/meetingEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="32dp"
                android:layout_margin="20dp"
                android:hint="Fin de la reunion" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/meetingSubject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="32dp"
                android:layout_margin="20dp"
                android:hint="Sujet de la reunion" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/meetingParticipants"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="32dp"
                android:layout_margin="20dp"
                android:hint="Participant à la reunion" />

            <Button
                android:id="@+id/buttonAddMeeting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="32dp"
                android:layout_margin="20dp"

                android:hint="Valider l'ajout d'une reunion"/>

        </LinearLayout>

    </ScrollView>


</LinearLayout>